SubVersion: $Id$

To do: 
  - pre-init structs (ti9x_create_regular_content) rather than bzeros them.

Log:
- 22/04/2004, version 0.5.9: roms
	Patch from Adrian Mettler <amettler@hmc.edu> merged. His patch fixes
	  some TI85/86 file handling issues about varname (padded, not padded).
	Patch from Benjamin Moody <> merged. His patch fixes a crash when TiLP
	is parsing a file which contains the TI signature but has no extension.

- 08/04/2004, version 0.5.8: roms
	Redirection of stdout/stderr.
	Fixed TI85/TI86 varname encoding bug.
	Added/improved TIB file support.

- 27/08/2003, version 0.5.7: maintenance release by JB.
	Use AM_MAINTAINER_MODE in configure.in
	Upgraded to automake 1.7
	Upgraded to libtool 1.5

- 01/05/2003, version 0.5.6:
	Added 'mu' char to TI89..V200. Unicode translation was missing for
	TI92(+)/V200.
	trans.c has been hugely reworked:
	- varname detokenization
	- TI-charset to user-selected charset transcoding
	
- 19/04/2003, version 0.5.5:
	Added various varname translations (ASCII, ISO8859-1 and UTF-8).
	Some fields have been extended (trans[9] -> trans[17]) to store
	Unicode strings. 
	tifiles_vartype2icon was missing.
	Some icons name was internationalized.
	
- 15/04/2003, version 0.5.4:
	Interface reworked for better consistency.
	Returns int instead of uint8_t for tifiles_folder/flash/idlist_type.
		
- 05/04/2003, version 0.5.3:
	Added a column to the TI73_CONST[] array (localized).
	The previous column is used as icon name (non localized).
	i18n enabled for Windows.
	indent -kr -i2
	
- 30/03/2003, version 0.5.2:
	i18n updated.
	Included French translations.
	Code source parsed for _() occurences.
	
- 18/03/2003, version 0.5.1 (testing phase):
	Fixed V200 types.
	Fixed TI83+ types (> instead of <).
	
- 09/03/2003, version 0.5.0:
        Added type to string conversion functions.
	
- 08/03/2003, version 0.4.9:
	Group files from FLASH calculators are not considered as backup any
	longer.
	
- 23/02/2003, version 0.4.8: